test/bad/type_missmatch_07.mpp
var a:char;
var b:char;

print a * b;
